--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ server.port=9999
 #views
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+#database
+
+spring.datasource.url=jdbc:mysql://localhost:3306/spring
+spring.datasource.username=root
+spring.datasource.password=root
